Se instala e implementa ejs

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
     "ee-first": "^1.1.1",
+    "ejs": "^3.1.8",
     "encodeurl": "^1.0.2",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
@@ -91,8 +92,7 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-  "dev":"nodemon src/app.js",
-
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
