--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "anymatch": "^3.1.3",
     "array-flatten": "^1.1.1",
     "balanced-match": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.2.0",
     "body-parser": "^1.20.1",
     "brace-expansion": "^1.1.11",
@@ -30,6 +31,8 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.15.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
