--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "minimatch": "^3.1.2",
     "ms": "^2.0.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.2.3",
     "negotiator": "^0.6.3",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
@@ -82,6 +83,7 @@
     "safer-buffer": "^2.1.2",
     "semver": "^5.7.1",
     "send": "^0.18.0",
+    "sequelize": "^6.31.0",
     "serve-static": "^1.15.0",
     "setprototypeof": "^1.2.0",
     "side-channel": "^1.0.4",
