--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "debug": "^2.6.9",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
+    "dotenv": "^16.0.3",
     "ee-first": "^1.1.1",
     "ejs": "^3.1.8",
     "encodeurl": "^1.0.2",
@@ -84,6 +85,7 @@
     "semver": "^5.7.1",
     "send": "^0.18.0",
     "sequelize": "^6.31.0",
+    "sequelize-cli": "^6.6.0",
     "serve-static": "^1.15.0",
     "setprototypeof": "^1.2.0",
     "side-channel": "^1.0.4",
